# iced_drop

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/color/: Cargo.toml
examples/color/src/: main.rs
examples/todo/src/: highlight.rs  main.rs  operation.rs  tree.rs
examples/todo/src/theme/: button.rs  container.rs  text.rs  text_input.rs
src/: lib.rs
src/widget/: droppable.rs
src/widget/operation/: drop.rs
